solved the overflow error

--- a/dronezone/src/components/logoAnimation.css
+++ b/dronezone/src/components/logoAnimation.css
@@ -1,9 +1,7 @@
 .logo-container {
-  position: relative;
-  display: inline-block;
-  text-align: center;
-  min-width: 150px; 
-  left:150px;
+  /* display: flex;
+  justify-content: end;
+  align-items: center; */
 }
 
 /* Responsive adjustments */
@@ -47,9 +45,16 @@
   border-radius: 50%;
   transform: translateX(-50%);
   animation: shadow-resize 2s infinite ease-in-out;
+  overflow: hidden;
 }
 
+.animate-bounce-up-and-down{
+  display: flex;
+  justify-content: end;
+}
 .animate-bounce-up-and-down:hover {
+  display: flex;
+  justify-content: end;
   animation: bounce 2s infinite ease-in-out;
 }
 
